fix portfoilo on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -73,6 +73,7 @@ nav .nav_list li a:hover {
     right: -250px;
     top: 10px;
     background: #fff;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     z-index: 2;
     transition: 0.000000001s;
 }
@@ -85,13 +86,13 @@ nav .nav_list li a:hover {
     transition: 0.000000001s;
 }
 
-nav .side_nav_list li {
+.side_nav_list li {
     list-style-type: none;
     margin-left: -1%;
     align-items: left;
 }
 
-nav .side_nav_list li a {
+.side_nav_list li a {
     display: flex;
     padding: 15px 16rem;
     padding-left: 20px;
@@ -100,7 +101,7 @@ nav .side_nav_list li a {
     font-size: 16px;
 }
 
-nav .side_nav_list li a:hover {
+.side_nav_list li a:hover {
     background: rgb(184, 183, 183);
     color: black;
 }
@@ -163,7 +164,7 @@ nav .side_nav_list li a:hover {
         display: none;
     }
 
-    @media only screen and (max-width: 600px) {
+    @media only screen and (max-width: 450px) {
         &.home-btn {
             display: inline-block;
         }
@@ -234,7 +235,7 @@ nav .side_nav_list li a:hover {
 #home-text,
 .span-web,
 #about_info-text {
-    @media only screen and (max-width: 600px) {
+    @media only screen and (max-width: 769px) {
         &.span-web {
             display: none;
         }
@@ -251,6 +252,7 @@ nav .side_nav_list li a:hover {
         text-align: center;
         justify-content: center;
         background-image: linear-gradient(#00000000, #0000005e, #0000005e), url('./images/parallax1.jpg');
+        background-size: fit-content;
         max-height: 90vh;
     }
 
@@ -307,6 +309,7 @@ nav .side_nav_list li a:hover {
     align-items: center;
     width: 50%;
 }
+
 #about_info-dtls {
     display: block;
     flex-wrap: wrap;
@@ -321,11 +324,14 @@ nav .side_nav_list li a:hover {
     margin-top: 50px;
     background-image: linear-gradient(#00000000, #0000005e, #0000005e), url('./images/avatar_hat.jpg');
     background-size: contain;
+    background-repeat: no-repeat;
     /* background-image: linear-gradient(rgba(0, 0, 0, 0.5), #0000005e), url('./images/avatar_hat.jpg'); */
 }
-#about_info-dtls:hover #imag{
+
+#about_info-dtls:hover #imag {
     background-image: url('./images/avatar_hat.jpg');
 }
+
 /* .overlay {
     width: 420px;
     height: 282px;
@@ -425,7 +431,7 @@ nav .side_nav_list li a:hover {
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 769px) {
     #about-info {
         display: flex;
         justify-content: center;
@@ -436,10 +442,20 @@ nav .side_nav_list li a:hover {
         display: flex;
         text-align: left;
         line-height: 25px;
+        /* margin: 0 15px; */
     }
 
-    #about_info-dtls img {
-        width: 250px;
+    #about_info-dtls,
+    #imag {
+        display: flex;
+        justify-content: center;
+        width: 100px;
+        background-repeat: no-repeat;
+        background-size: contain;
+
+        #imag {
+            width: 110px;
+        }
     }
 
     #about-skill {
@@ -521,8 +537,101 @@ nav .side_nav_list li a:hover {
     justify-content: center;
 }
 
+#portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
 #work_dtls {
     display: flex;
     flex-wrap: wrap;
     color: black;
+    justify-content: center;
+    font-weight: normal;
+    margin: 60px 0 20px 0;
+    h1{
+        text-align: center;
+        width: 100%;
+        font-weight: normal;
+        font-size: 20px;
+        letter-spacing: 4px;
+    }
+   h2{
+    text-align: center;
+        width: 100%;
+        font-weight: normal;
+        font-size: 16px;
+        font-family: 'lato', sans-serif;
+        margin: 30px 0 9px 0;
+   }
+}
+#my_coln {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+#my_coln div {
+    display: flex;
+    justify-content: center;
+}
+.animal-coln, .animal-coln_2{
+    width: 60%;
+}
+.animal-coln img, .animal-coln_2 img{
+    width: 200px;
+    margin: 10px 10px;
+}
+
+#opt_btn{
+    display: flex;
+    margin: 50px 0;
+    justify-content: center;
+    text-align: center;
+    background: #efeded;
+    padding:15px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+#opt_btn:hover{
+    background: rgb(198, 198, 198);
+    transition: 0.2s;
+}
+
+@media only screen and (max-width: 600px){
+    #port_intro {
+        display: flex;
+        text-align: center;
+        justify-content: center;
+        /* margin-top: 50px; */
+        background-image: linear-gradient(#00000000, #0000005e, #0000005e), url('./images/parallax2.jpg');
+        background-size: cover;
+        height: 75vh;
+    }
+    #bar_cnt{
+        display: flex;
+        flex-wrap: wrap;
+        padding: 0 100px;
+        height: 50vh; 
+        div{
+            margin: 0 20px;
+        }
+    }
+    #work_dtls h2{
+        width: 90%;
+        line-height: 30px;
+        margin-bottom: 5px;
+    }
+
+    .animal-coln, .animal-coln_2{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        img{
+        min-width: 250px;
+        margin: 0 0;
+        gap: 0;}
+    }
 }
